--- a/pom.xml
+++ b/pom.xml
@@ -167,7 +167,10 @@
                 <includes>
                     <include>**/*.yml</include>
                     <include>**/*.properties</include>
+                    <include>**/banner.txt</include>
+
                 </includes>
+                <filtering>false</filtering>
             </resource>
             <resource>
                 <directory>src/main/webapp</directory>
@@ -175,6 +178,7 @@
                 <includes>
                     <include>**/*.*</include>
                 </includes>
+                <filtering>false</filtering>
             </resource>
         </resources>
     </build>
