--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -21,3 +21,5 @@ spring.datasource.password=7464c98e135ccea2
 #\u8868\u5355\u4F20\u9012\u65F6\u95F4\u5B57\u7B26\u4E32\uFF08\u8868\u5355\u4F20\u9012\u7684\u90FD\u662FString\u7C7B\u578B\uFF09\uFF0C\u5C01\u88C5\u5230pojo\u7684java.util.Date\u7C7B\u578B\u5C5E\u6027\u4E2D
 #spring.mvc.dateFormat = yyyy-MM-dd HH:mm:ss
 spring.mvc.dateFormat = yyyy-MM-dd
+# \u542F\u7528hiddenMethod\u8FC7\u6EE4\u5668
+spring.mvc.hiddenmethod.filter.enabled=true
