--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=dev
-server.servlet.context-path=/springboot21
+server.servlet.context-path=/
 
 #\u7F16\u7801
 spring.http.encoding.charset=utf-8
